--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ mdurl==0.1.2
 packaging==25.0
 pluggy==1.6.0
 pydantic==2.12.5
+pydantic-settings==2.12.0
 pydantic_core==2.41.5
 Pygments==2.19.2
 pytest==9.0.1
