🔧 Initial config for linter and formatter

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 annotated-doc==0.0.4
 annotated-types==0.7.0
 anyio==4.12.0
+black==25.11.0
 certifi==2025.11.12
 click==8.3.1
 dnspython==2.8.0
@@ -9,26 +10,35 @@ fastapi==0.123.5
 fastapi-cli==0.0.16
 fastapi-cloud-cli==0.5.2
 fastar==0.8.0
+flake8==7.3.0
 h11==0.16.0
 httpcore==1.0.9
 httptools==0.7.1
 httpx==0.28.1
 idna==3.11
 iniconfig==2.3.0
+isort==7.0.0
 Jinja2==3.1.6
 markdown-it-py==4.0.0
 MarkupSafe==3.0.3
+mccabe==0.7.0
 mdurl==0.1.2
+mypy_extensions==1.1.0
 packaging==25.0
+pathspec==0.12.1
+platformdirs==4.5.0
 pluggy==1.6.0
+pycodestyle==2.14.0
 pydantic==2.12.5
 pydantic-settings==2.12.0
 pydantic_core==2.41.5
+pyflakes==3.4.0
 Pygments==2.19.2
 pytest==9.0.1
 pytest-asyncio==1.3.0
 python-dotenv==1.2.1
 python-multipart==0.0.20
+pytokens==0.3.0
 PyYAML==6.0.3
 rich==14.2.0
 rich-toolkit==0.17.0
