🚧 Databases engine created Security hash password tools implemente User model imlemented

--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ fastapi-cli==0.0.16
 fastapi-cloud-cli==0.5.2
 fastar==0.8.0
 flake8==7.3.0
+greenlet==3.3.0
 h11==0.16.0
 httpcore==1.0.9
 httptools==0.7.1
@@ -25,6 +26,7 @@ mccabe==0.7.0
 mdurl==0.1.2
 mypy_extensions==1.1.0
 packaging==25.0
+passlib==1.7.4
 pathspec==0.12.1
 platformdirs==4.5.0
 pluggy==1.6.0
@@ -44,6 +46,8 @@ rich-toolkit==0.17.0
 rignore==0.7.6
 sentry-sdk==2.47.0
 shellingham==1.5.4
+SQLAlchemy==2.0.44
+sqlmodel==0.0.27
 starlette==0.50.0
 typer==0.20.0
 typing-inspection==0.4.2
