--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,8 @@ services:
     ports:
       - "8000:8000"
     environment:
-      DATABASE_URL: postgresql://postgres:postgres@postgres_main:5432/fastapi_pillar
-      TEST_DATABASE_URL: postgresql://postgres:postgres@postgres_test:5432/fastapi_pillar_test
+      DATABASE_URL: postgresql+psycopg://postgres:postgres@postgres_main:5432/fastapi_pillar
+      TEST_DATABASE_URL: postgresql+psycopg://postgres:postgres@postgres_test:5432/fastapi_pillar_test
       ENV: development
     depends_on:
       - postgres_main
