--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,63 @@
-wheel==0.45.1
+annotated-doc==0.0.4
+annotated-types==0.7.0
+anyio==4.12.0
+bcrypt==4.0.1
+black==25.11.0
+certifi==2025.11.12
+click==8.3.1
+dnspython==2.8.0
+email-validator==2.3.0
+fastapi==0.123.5
+fastapi-cli==0.0.16
+fastapi-cloud-cli==0.5.2
+fastar==0.8.0
+flake8==7.3.0
+greenlet==3.3.0
+h11==0.16.0
+httpcore==1.0.9
+httptools==0.7.1
+httpx==0.28.1
+idna==3.11
+iniconfig==2.3.0
+isort==7.0.0
+Jinja2==3.1.6
+markdown-it-py==4.0.0
+MarkupSafe==3.0.3
+mccabe==0.7.0
+mdurl==0.1.2
+mypy_extensions==1.1.0
+packaging==25.0
+passlib==1.7.4
+pathspec==0.12.1
+platformdirs==4.5.0
+pluggy==1.6.0
+psycopg==3.3.1
+psycopg-binary==3.3.1
+pycodestyle==2.14.0
+pydantic==2.12.5
+pydantic-settings==2.12.0
+pydantic_core==2.41.5
+pyflakes==3.4.0
+Pygments==2.19.2
+pytest==9.0.1
+pytest-asyncio==1.3.0
+python-dotenv==1.2.1
+python-multipart==0.0.20
+pytokens==0.3.0
+PyYAML==6.0.3
+rich==14.2.0
+rich-toolkit==0.17.0
+rignore==0.7.6
+sentry-sdk==2.47.0
+shellingham==1.5.4
+SQLAlchemy==2.0.44
+sqlmodel==0.0.27
+starlette==0.50.0
+typer==0.20.0
+typing-inspection==0.4.2
+typing_extensions==4.15.0
+urllib3==2.5.0
+uvicorn==0.38.0
+uvloop==0.22.1
+watchfiles==1.1.1
+websockets==15.0.1
