--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+alembic==1.17.2
 annotated-doc==0.0.4
 annotated-types==0.7.0
 anyio==4.12.0
@@ -21,6 +22,7 @@ idna==3.11
 iniconfig==2.3.0
 isort==7.0.0
 Jinja2==3.1.6
+Mako==1.3.10
 markdown-it-py==4.0.0
 MarkupSafe==3.0.3
 mccabe==0.7.0
