🔧 Factory-boy and Faker libraries installed and implemented Seed to create users only in Dev working

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,8 @@ certifi==2025.11.12
 click==8.3.1
 dnspython==2.8.0
 email-validator==2.3.0
+factory_boy==3.3.3
+Faker==38.2.0
 fastapi==0.123.5
 fastapi-cli==0.0.16
 fastapi-cloud-cli==0.5.2
@@ -58,6 +60,7 @@ starlette==0.50.0
 typer==0.20.0
 typing-inspection==0.4.2
 typing_extensions==4.15.0
+tzdata==2025.2
 urllib3==2.5.0
 uvicorn==0.38.0
 uvloop==0.22.1
