🔧 Test files configuration

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,2 +1,22 @@
 [pytest]
 pythonpath = .
+testpaths = tests
+python_files = test_*.py
+python_classes = Test*
+python_functions = test_*
+asyncio_mode = auto
+
+markers =
+    unit: Unit tests for individual components (schemas, security, etc.)
+    integration: Integration tests for repository and service layers
+    router: Router/endpoint tests requiring full HTTP stack
+    service: Service layer tests
+    repository: Repository layer tests
+    schema: Schema validation tests
+    security: Security and hashing tests
+
+addopts = 
+    -v
+    --strict-markers
+    --tb=short
+    -ra
