--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ bcrypt==4.0.1
 black==25.11.0
 certifi==2025.11.12
 click==8.3.1
+coverage==7.13.0
 dnspython==2.8.0
 email-validator==2.3.0
 factory_boy==3.3.3
