--- a/pytest.ini
+++ b/pytest.ini
@@ -5,6 +5,7 @@ python_files = test_*.py
 python_classes = Test*
 python_functions = test_*
 asyncio_mode = auto
+cache_dir = /tmp/.pytest_cache
 
 markers =
     unit: Unit tests for individual components (schemas, security, etc.)
