🔧 add CircleCI pipeline and Coveralls integration

--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,11 @@ TEST_DATABASE_URL=postgresql+psycopg://postgres:postgres@postgres_test:5432/fast
 # Local development (uncomment if running without Docker)
 # DATABASE_URL=postgresql+psycopg://postgres:postgres@localhost:5432/fastapi_pillar
 # TEST_DATABASE_URL=postgresql+psycopg://postgres:postgres@localhost:5433/fastapi_pillar_test
+
+# CircleCI / Coveralls Configuration
+# COVERALLS_REPO_TOKEN=<your-coveralls-repo-token>
+
+# Heroku Configuration (set these as environment variables in Heroku)
+# HEROKU_APP_NAME=<your-heroku-app-name>
+# HEROKU_API_KEY=<your-heroku-api-key>
+
