--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,30 +11,43 @@ jobs:
       - checkout
       - setup_remote_docker:
           version: 20.10.7
+          docker_layer_caching: true
+      - run:
+          name: Install Docker Compose
+          command: |
+            curl -L "https://github.com/docker/compose/releases/latest/download/docker-compose-$(uname -s)-$(uname -m)" -o ~/docker-compose
+            chmod +x ~/docker-compose
+            mkdir -p ~/.local/bin
+            mv ~/docker-compose ~/.local/bin/docker-compose
+            export PATH="$PATH:~/.local/bin"
       - run:
           name: Build Docker image
           command: docker build -t fastapi_pillar:latest .
       - run:
           name: Run tests with coverage
           command: |
-            docker compose up -d postgres_test
-            sleep 10
-            docker compose run --rm test coverage run -m pytest --verbose
+            export PATH="$PATH:~/.local/bin"
+            ~/.local/bin/docker-compose up -d postgres_test
+            sleep 15
+            ~/.local/bin/docker-compose run --rm test coverage run -m pytest --verbose
+          no_output_timeout: 5m
       - run:
           name: Generate coverage XML for Coveralls
           command: |
-            docker compose run --rm test coverage xml
+            export PATH="$PATH:~/.local/bin"
+            ~/.local/bin/docker-compose run --rm test coverage xml
       - run:
           name: Upload coverage to Coveralls
           command: |
-            docker compose run --rm test pip install coveralls
-            docker compose run --rm test coveralls --service=circleci
+            export PATH="$PATH:~/.local/bin"
+            ~/.local/bin/docker-compose run --rm test pip install coveralls
+            ~/.local/bin/docker-compose run --rm test coveralls --service=circleci
       - run:
           name: Cleanup Docker containers
-          command: docker compose down
+          command: |
+            export PATH="$PATH:~/.local/bin"
+            ~/.local/bin/docker-compose down
           when: always
-      - store_test_results:
-          path: /tmp/test-results
       - store_artifacts:
           path: coverage_html_report
           destination: coverage-report
