--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,6 +2,7 @@ version: 2.1
 
 orbs:
   heroku: circleci/heroku@2.0.0
+  coveralls: coveralls/coveralls@2.2.5
 
 jobs:
   test:
@@ -10,7 +11,6 @@ jobs:
     steps:
       - checkout
       - setup_remote_docker:
-          version: 20.10.7
           docker_layer_caching: true
       - run:
           name: Install Docker Compose
@@ -29,19 +29,8 @@ jobs:
             export PATH="$PATH:~/.local/bin"
             ~/.local/bin/docker-compose up -d postgres_test
             sleep 15
-            ~/.local/bin/docker-compose run --rm test coverage run -m pytest --verbose --tb=short
+            ~/.local/bin/docker-compose run --rm test sh -c "coverage run -m pytest --verbose --tb=short && coverage xml && coverage html"
           no_output_timeout: 5m
-      - run:
-          name: Generate coverage XML for Coveralls
-          command: |
-            export PATH="$PATH:~/.local/bin"
-            ~/.local/bin/docker-compose run --rm test coverage xml
-      - run:
-          name: Upload coverage to Coveralls
-          command: |
-            export PATH="$PATH:~/.local/bin"
-            ~/.local/bin/docker-compose run --rm test pip install coveralls
-            ~/.local/bin/docker-compose run --rm test coveralls --service=circleci
       - run:
           name: Cleanup Docker containers
           command: |
