--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,6 +57,7 @@ services:
       dockerfile: Dockerfile
     container_name: fastapi_pillar_test
     command: pytest --verbose --tb=short
+    user: root
     environment:
       DATABASE_URL: postgresql+psycopg://postgres:postgres@postgres_main:5432/fastapi_pillar
       TEST_DATABASE_URL: postgresql+psycopg://postgres:postgres@postgres_test:5432/fastapi_pillar_test
@@ -66,8 +67,7 @@ services:
     networks:
       - fastapi_pillar_network
     volumes:
-      - ./app:/app/app:delegated
-      - ./tests:/app/tests:delegated
+      - .:/workspace
 
 networks:
   fastapi_pillar_network:
